--- a/ReantalApp/ReantalApp.csproj
+++ b/ReantalApp/ReantalApp.csproj
@@ -105,11 +105,23 @@
     <Compile Include="frmAddBrand.Designer.cs">
       <DependentUpon>frmAddBrand.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmAddCar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAddCar.Designer.cs">
+      <DependentUpon>frmAddCar.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmBrandList.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmBrandList.Designer.cs">
       <DependentUpon>frmBrandList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmCarList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCarList.Designer.cs">
+      <DependentUpon>frmCarList.cs</DependentUpon>
     </Compile>
     <Compile Include="frmDashboard.cs">
       <SubType>Form</SubType>
@@ -122,8 +134,14 @@
     <EmbeddedResource Include="frmAddBrand.resx">
       <DependentUpon>frmAddBrand.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmAddCar.resx">
+      <DependentUpon>frmAddCar.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmBrandList.resx">
       <DependentUpon>frmBrandList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmCarList.resx">
+      <DependentUpon>frmCarList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmDashboard.resx">
       <DependentUpon>frmDashboard.cs</DependentUpon>
